manifests/traefik.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  labels:
    name: traefik-ingress-lb
spec:
  selector:
    matchLabels:
      name: traefik-ingress-lb
  template:
    metadata:
      labels:
        name: traefik-ingress-lb
    spec:
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
        - name: traefik
          image: traefik:v2.5
          args:
            - --entrypoints.http.address=:80
            - --entrypoints.https.address=:443
            - --entrypoints.httpalt.address=:9090
            - --providers.kubernetesingress
            - --api.insecure=true
          ports:
            - name: http
              containerPort: 80
              hostPort: 10080
            - name: https
              containerPort: 443
              hostPort: 10443
            - name: httpalt
              containerPort: 9090
              hostPort: 19090
          resources:
            limits:
              memory: "128Mi"


---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
spec:
  selector:
    name: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: http
    - protocol: TCP
      port: 8080
      name: admin
