manifests/traefik-ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
spec:
  selector:
    name: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-web-ui
spec:
  rules:
  - host: traefik-ui.k8.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-web-ui
            port:
              name: web
