manifests/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    app: traefiklabs
    name: whoami

spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefiklabs
      task: whoami
  template:
    metadata:
      labels:
        app: traefiklabs
        task: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "32Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: traefiklabs
    task: whoami

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: http
spec:
  rules:
  - host: whoami.k8.local
    http:
      paths:
      - path: /bar
        pathType: Exact
        backend:
          service:
            name:  whoami
            port:
              name: http
      - path: /foo
        pathType: Exact
        backend:
          service:
            name:  whoami
            port:
              name: http
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              name: http
